--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -6,9 +6,10 @@
 		<div class="column-12">
 			<div class="login-wrapper display-table">
 				<div class="login-form display-table-cell">
+					<div class="back-home">Back to <a href="http://localhost:5000">homepage</a>.</div>
 					<h1 class="login-text">Moonbow CMS</h1>
 					<h4 class="login-description">Welcome to the login page</h4>
-					
+
 					{% include "_messages.html.j2" %}
 				
 					<form id="login" action="" method="POST">
@@ -18,7 +19,7 @@
 						<div class="form-group">
 							<input type="password" name="password" class="login-pw" placeholder="password" value={{ request.form.password }}>
 						</div>
-				    	<button type="submit" class="login-btn">Login</button>
+				    	<button type="submit" class="login-btn" disabled="disabled">Login</button>
 					</form>
 					<div class="lost-pw">
 						<span>Lost your password? Click <a href="#">here</a>.</span>
