Finished Login Page Login page is now complete, with few extra tweaks, and copmlete error handling. Also added a secret key for seessions as a comment in __init__.py, because the value is pulled from mbconf.py which is not tracked.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -502,10 +502,15 @@ textarea:focus, input:focus {
       padding-top: 40px;
       font-size: 0.7em;
       color: #909090; }
+    .login-wrapper .login-form .login-status-wrapper {
+      margin: 20px 0;
+      height: 50px; }
     .login-wrapper .login-form .login-status {
       font-size: 0.8em;
       padding: 5px;
-      margin: 20px 0; }
+      color: #db3939;
+      border: 1px solid;
+      display: none; }
   .login-wrapper .back-home {
     font-size: 0.7em;
     color: #909090;
