--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -19,7 +19,7 @@
 						<div class="form-group">
 							<input type="password" name="password" class="login-pw" placeholder="password" value={{ request.form.password }}>
 						</div>
-				    	<button type="submit" class="login-btn" disabled="disabled">Login</button>
+				    	<button type="submit" class="login-btn">Login</button>
 					</form>
 					<div class="lost-pw">
 						<span>Lost your password? Click <a href="#">here</a>.</span>
