--- a/templates/dashboard.html.j2
+++ b/templates/dashboard.html.j2
@@ -1,4 +1,9 @@
 {% extends "header.html.j2" %}
 {% block body %}
-	<p>Hi {{ session["username"] }}</p>
+	{# <p>Hi {{ session["username"] }}</p> #}
+	<div class="row">
+		<div class="column-12">
+			Dashboard
+		</div>	
+	</div>
 {% endblock %}
