--- a/templates/dashboard.html.j2
+++ b/templates/dashboard.html.j2
@@ -2,27 +2,52 @@
 {% block body %}
 	{% set home_url = 'http://localhost:5000/' %}
 	{% set logout_url = 'http://localhost:5000/logout/' %}
+	{% set section_names = ['Overview', 'General Settings', 'Sections'] %}
+	{% set section_description = ['Stats, updates and news', 'General information about the user', 'Sections management and overview'] %}
+	{% set cms_meta = 'Point CMS v0.0.1' %}
+	{% set website_name = 'Kostadinovski' %}
+	{% set greeting = ['Hello', 'Howdy', 'Hi there', 'Hola', 'Zdravo', 'Zivijo', 'Bonjour', 'Namaste', 'Guten tag', 'Ola', 'Ciao'] %}
 	<div class="row">
 		<div class="column-12">
-			<div class="dashboard-wrapper">
-				<div class="dashboard-header">
-					<h1 class="dashboard-title">Moonbow CMS Dashboard</h1>
-					<p class="welcome-user">Hi there, <span class="username">{{ session["username"].title() }}!</span></p>
-					<p><a href="{{ home_url }}" class="user-meta">Visit Homepage</a><a href="{{ logout_url }}" class="user-meta">Logout</a></p>
-				</div>
-				<div class="dashboard-content">
-					<div class="column-3">
-						<div class="dashboard-nav">
-							{% set section_names = ['Overview', 'General Settings', 'Sections'] %}
-							{% set section_description = ['Stats, updates and news', 'General information about the user', 'Sections management and overview'] %}
-							<ul>
-								{% for i in range(3) %}
-								<li class="dashboard-nav-item">{{ section_names[i] }}</li>
-								{% endfor %}
-							</ul>
+			<div class="dashboard-header display-table">
+				<div class="row display-table-cell">
+					<div class="column-2">
+						<div class="website-meta">
+							<p class="website-name">{{ website_name }}</p>
 						</div>
 					</div>
-					<div class="column-9">
+					<div class="column-8">
+						<div class="dashboard-nav-wrapper">
+							<nav class="dashboard-nav">
+								<ul>
+									{% for i in range(3) %}
+									<li class="dashboard-nav-item">{{ section_names[i] }}</li>
+									{% endfor %}
+								</ul>
+							</nav>
+						</div>
+					</div>
+					<div class="column-2">
+						<div class="user-meta">
+							{% set rand_greet = range(greeting | length ) | random %}
+							<div class="welcome-user">{{ greeting[rand_greet] }}, 
+								<span class="username">{{ session["username"].title() }}</span>!
+								<div class="user-nav-wrapper">
+									<nav class="user-nav">
+										<ul>
+											<li><a href="{{ home_url }}">Visit website</a></li>
+											<li><a href="{{ logout_url }}">Logout</a></li>
+										</ul>
+									</nav>
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>	
+			</div>
+			<div class="dashboard-content">
+				<div class="row">
+					<div class="column-12">
 						<div class="section-wrapper">
 							{% for i in range(3) %}
 								<section id="section-settings" class="dashboard-section dashboard-section-settings">
@@ -30,14 +55,27 @@
 										<p class="db-section-title">{{ section_names[i] }}</p>
 										<p class="db-section-description">{{ section_description[i] }}</p>
 									</div>
-									<div class="db-section-content"></div>
+									<div class="db-section-content">
+										{% if (section_names[i] == 'Overview'): %}
+											{% include "_dashboard_overview.html.j2" %}
+										{% endif %}
+										{% if (section_names[i] == 'General Settings'): %}
+											{% include "_dashboard_settings.html.j2" %}
+										{% endif %}
+										{% if (section_names[i] == 'Sections'): %}
+											<p>Manage your sections.</p>
+										{% endif %}
+									</div>
 								</section>
 							{% endfor %}
 						</div>
 					</div>
-					<div class="clearfix"></div>
+				</div>
+				<div class="clearfix"></div>
+				<div class="cms-meta">
+					<span class="cms-version">{{ cms_meta }}</span>
 				</div>
 			</div>
-		</div>	
-	</div>
+		</div>
+	</div>	
 {% endblock %}	
