--- a/templates/_dashboard_settings.html.j2
+++ b/templates/_dashboard_settings.html.j2
@@ -1,1 +1,82 @@
-<p>Dashboard settings</p>
+<div class="row">
+	<div class="column-12">
+		<div class="column-3">
+			<p class="db-quick-title">General Settings</p>
+			<p class="db-quick-subtitle">Webisite Info</p>
+			<form>
+				<div class="db-quick-row">
+					<div class="form-group">
+						<p class="db-quick-inner-text">Website Name:</p>
+						<input type="text" name="website_name">
+					</div>
+					<div class="form-group">
+						<p class="db-quick-inner-text">Website Description:</p>
+						<input type="text" name="website_description">
+					</div>
+					<div class="form-group">
+						<p class="db-quick-inner-text">Website URL:</p>
+						<input type="text" name="website_author">
+					</div>
+					<div class="form-group">
+						<p class="db-quick-inner-text">Author:</p>
+						<input type="text" name="website_author">
+					</div>
+					<div class="form-group">
+						<p class="db-quick-inner-text">Email Address:</p>
+						<input type="text" name="website_author">
+					</div>
+					<div class="align-right">
+						<button type="submit" class="save-btn">Save</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="column-3">
+			<p class="db-quick-title">Sections Settings</p>
+			<p class="db-quick-subtitle">Footer Info</p>
+			<div class="db-quick-row">
+				<form>
+					<div class="form-group">
+						<textarea name="footer_info"></textarea>
+					</div>
+					<div class="align-right">
+						<button type="submit" class="save-btn">Save</button>
+					</div>		
+				</form>
+			</div>
+		</div>
+		<div class="column-3">
+			<p class="db-quick-title">Social Networks</p>
+			<p class="db-quick-subtitle">Social links</p>
+			<form>
+				<div class="form-group">
+					<p class="db-quick-inner-text">LinkedIn</p>
+					<input type="text" name="social_linkedin">
+				</div>
+				<div class="form-group">
+					<p class="db-quick-inner-text">GitHub</p>
+					<input type="text" name="social_github">
+				</div>
+				<div class="form-group">
+					<p class="db-quick-inner-text">Stack Overflow</p>
+					<input type="text" name="social_stackoverflow">
+				</div>
+				<div class="form-group">
+					<p class="db-quick-inner-text">Twitter</p>
+					<input type="text" name="social_twitter">
+				</div>
+				<div class="form-group">
+					<p class="db-quick-inner-text">Facebook</p>
+					<input type="text" name="social_facebook">
+				</div>
+				<div class="form-group">
+					<p class="db-quick-inner-text">Instagram</p>
+					<input type="text" name="social_instagram">
+				</div>
+				<div class="align-right">
+					<button type="submit" class="save-btn">Save</button>
+				</div>		
+			</form>
+		</div>
+	</div>
+</div>
