--- a/templates/dashboard.html.j2
+++ b/templates/dashboard.html.j2
@@ -2,7 +2,7 @@
 {% block body %}
 	{% set home_url = 'http://localhost:5000/' %}
 	{% set logout_url = 'http://localhost:5000/logout/' %}
-	{% set section_names = ['Overview', 'General Settings', 'Sections'] %}
+	{% set section_names = ['Overview', 'Settings', 'Sections'] %}
 	{% set section_description = ['Stats, updates and news', 'General information about the user', 'Sections management and overview'] %}
 	{% set cms_meta = 'Point CMS v0.0.1' %}
 	{% set website_name = 'Kostadinovski' %}
@@ -13,7 +13,7 @@
 				<div class="row display-table-cell">
 					<div class="column-2">
 						<div class="website-meta">
-							<p class="website-name">{{ website_name }}</p>
+							<p class="website-name"><a href="{{ home_url }}">{{ website_name }}</a></p>
 						</div>
 					</div>
 					<div class="column-8">
@@ -59,7 +59,7 @@
 										{% if (section_names[i] == 'Overview'): %}
 											{% include "_dashboard_overview.html.j2" %}
 										{% endif %}
-										{% if (section_names[i] == 'General Settings'): %}
+										{% if (section_names[i] == 'Settings'): %}
 											{% include "_dashboard_settings.html.j2" %}
 										{% endif %}
 										{% if (section_names[i] == 'Sections'): %}
